# AttLine

./: .gitignore  LICENSE  README.md  README_ch.md  pyproject.toml
attline/: __init__.py  _flux1_dev.py  _flux2_klein.py  _qwenimage_2512.py  api.py  attach.py  capture.py  layouts.py  patch.py  render.py  selectors.py
examples/: flux1_dev.py  flux2_klein.py  qwen_image_2512.py
